--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "ai-ad-demo",
   "version": "1.0.0",
-  "description": "AI-powered ad generation based on real-time facial analysis.",
+  "description": "An AI-powered ad generation demo using face-api.js and LLMs.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "ai",
-    "ad",
     "face-api",
-    "llm"
+    "llm",
+    "express"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0"
   }
 }
